progression alignment fixes

--- a/western-digital-webapp/src/mentee_pages/TodoProgression.css
+++ b/western-digital-webapp/src/mentee_pages/TodoProgression.css
@@ -179,7 +179,7 @@
   display: flex;
   flex-direction: column; /* Stack the title above the options */
   align-items: left; /* Center the group horizontally */
-  text-align: center;
+  text-align: left;
 }
 
 .todo-progression .question-group p {
@@ -207,6 +207,7 @@
   align-items: center; /* Center the group horizontally */
   text-align: center;
   gap: 15px; /* Add spacing between the options */
+  margin-left: 6px;
   color: black;
 
 }
